# EAVES

./: .gitignore  .markdownlint.json  CHANGELOG.md  CITATION.cff  README.md  environment.yml  pyproject.toml  pytest.ini  run_all.sh  run_eaves.py
.github/workflows/: ci.yml
documentation/: data-dependencies.md  method.md  outputs.md  structure.md  usage.md
documentation/img/: readme.md
eaves/: __init__.py  __main__.py  cli.py  config.py  curves.py  placement.py  plots.py  preprocess.py  regionalization.py  settings.py  terrain.py  utils.py  workers.py
eaves/pipeline/: __init__.py  curves.py  placement.py  terrain.py  workers.py
eaves/postprocess/: __init__.py  dem_error.py  external_data.py  plots.py  regionalization.py  reliability.py  report.py  sensitivity.py  uncertainty.py  validation.py
eaves/postprocess/panels/: __init__.py  p1.py  (+12 more)
input/domain_inputs/: dams_snapped.geojson
input/grdl/: rabigh.csv
input/ksa_dams/: clean_catalogue.py  ksa_dams_excluded.csv  ksa_dams_transliterated.csv  ksa_dams_transliterated.csv.bak
output/1_results_csv/: bathymetry_validation.csv  eaves_params.csv  eaves_summary.csv  failed_dams.csv  threshold_analysis.csv
region/ksa/: ksa.json
settings/: ksa.json  test.json
test/: README.md  conftest.py  golden_hashes.json  test_curves_helpers.py  test_panels_helpers.py  test_regionalization.py  test_regression.py  test_sediment.py  test_uncertainty.py
test/fixture/: settings.json
test/input/: dams_example.csv
tests/: conftest.py  golden_hashes.json  test_regression.py  test_smoke.py
tests/fixture/: settings.json
(+1587 files in other folders)
