[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eaves"
dynamic = ["version"]
description = "Elevation–Area–Volume estimation for ungaged arid-basin reservoirs from pre-impoundment SRTM topography"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nikola Ivanović", email = "nikola.ivanovic@kaust.edu.sa" },
]
keywords = [
    "hydrology",
    "reservoir",
    "bathymetry",
    "SRTM",
    "elevation-area-volume",
    "remote sensing",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "geopandas",
    "shapely",
    "pyproj",
    "rasterio",
    "matplotlib",
    "scikit-learn",
    "tqdm",
]

[project.optional-dependencies]
test = ["pytest"]
figures = ["forge3d>=1.23.1"]

[project.scripts]
eaves = "eaves.cli:main"

[project.urls]
Homepage = "https://github.com/hyex-research/EAVES"
Issues   = "https://github.com/hyex-research/EAVES/issues"

[tool.setuptools.packages.find]
include = ["eaves*"]

[tool.setuptools.dynamic]
version = { attr = "eaves.__version__" }
